--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     testImplementation 'junit:junit:4.+'
